src/objects/LeanData__Buyer_Persona__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Active__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactLogic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LeadLogic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Persona_Order__c</fullName>
        <label>PersonaOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Buyer Persona</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyer Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyer Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>